force-app/main/default/objects/Follow_Up_Question_Data__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <formula>Follow_Up_Detail_Config__r.Field_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Name</label>
    <type>Text</type>
</CustomField>