force-app/main/default/objects/Follow_Up_Question_Data__c/fields/Field_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Field_Name_del__c</fullName>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>