force-app/main/default/objects/Follow_Up_Question_Data__c/fields/Follow_Up_Detail_Config__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Detail_Config__c</fullName>
    <label>Follow Up Detail Config</label>
    <referenceTo>Follow_Up_Detail_Config__c</referenceTo>
    <relationshipLabel>Follow Up Question Data</relationshipLabel>
    <relationshipName>Follow_Up_Question_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>