force-app/main/default/objects/Follow_Up_Question_Data__c/fields/Follow_Up_Question_Detail__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Question_Detail__c</fullName>
    <label>Follow Up Question Detail</label>
    <referenceTo>Follow_Up_Question_Detail__c</referenceTo>
    <relationshipLabel>Follow Up Question Data</relationshipLabel>
    <relationshipName>Follow_Up_Question_Data</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>