force-app/main/default/objects/Follow_Up_Question_Data__c/fields/Show_on_summary_table__c.field-meta.xml
<CustomField>
    <fullName>Show_on_summary_table__c</fullName>
    <formula>Follow_Up_Detail_Config__r.Show_on_summary_table__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show on summary table</label>
    <type>Checkbox</type>
</CustomField>