force-app/main/default/objects/Follow_Up_Question_Data__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>